--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>472</height>
+    <width>450</width>
+    <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,10 +19,20 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="7" column="0">
-     <widget class="QPushButton" name="pushButton_2">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label">
+      <property name="lineWidth">
+       <number>1</number>
+      </property>
       <property name="text">
-       <string>Stop</string>
+       <string>Please select the adapter(s)</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="0">
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>Generate random MAC</string>
       </property>
      </widget>
     </item>
@@ -63,36 +73,19 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="0">
-     <widget class="QPushButton" name="pushButton">
-      <property name="text">
-       <string>Generate random MAC</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="label">
-      <property name="lineWidth">
-       <number>1</number>
-      </property>
-      <property name="text">
-       <string>Please select the adapter(s)</string>
-      </property>
-     </widget>
-    </item>
     <item row="5" column="0">
-     <widget class="QSpinBox" name="spinBox">
-      <property name="suffix">
-       <string> seconds</string>
-      </property>
+     <widget class="QDoubleSpinBox" name="doubleSpinBox">
       <property name="prefix">
        <string>interval </string>
       </property>
+      <property name="suffix">
+       <string> second</string>
+      </property>
       <property name="minimum">
-       <number>2</number>
+       <double>0.100000000000000</double>
       </property>
       <property name="maximum">
-       <number>3600</number>
+       <double>3600.000000000000000</double>
       </property>
      </widget>
     </item>
@@ -103,6 +96,13 @@
       </property>
      </widget>
     </item>
+    <item row="7" column="0">
+     <widget class="QPushButton" name="pushButton_2">
+      <property name="text">
+       <string>Stop</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -110,7 +110,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>450</width>
      <height>21</height>
     </rect>
    </property>
